--- a/Sprint0/Task0.ipynb
+++ b/Sprint0/Task0.ipynb
@@ -3,14 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72843c8b",
+   "id": "f62deebf",
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Console.WriteLine(\"!!!\")"
+   ]
   }
  ],
  "metadata": {
