--- a/Sprint0/Task0.ipynb
+++ b/Sprint0/Task0.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -73,7 +73,16 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Здраствуйте Игорь. Вам 45 лет!\n",
+      "Добро пожаловать в C#\n"
+     ]
+    }
+   ],
    "source": [
     "string Name = \"Игорь\";\n",
     "int Age = 45;\n",
@@ -126,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,8 +144,140 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "int[] mass = {5, 8, 1, 3, 9, 6, 7, 2};\n",
+    "Console.WriteLine(mass.Min());\n",
+    "Console.WriteLine(mass.Max());\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "41\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Console.WriteLine(mass.Sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Console.WriteLine(mass.Sum()/mass.Length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "Array.Sort(mass);\n",
+    "for(int i =0; i<=mass.Length-1; i++)\n",
+    "{\n",
+    "    Console.WriteLine(mass[i]);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Число повторяется\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int num =5;\n",
+    "int j=0;\n",
+    "for(int i =0; i<=mass.Length-1; i++)\n",
+    "{\n",
+    "   if(mass[i]==num)\n",
+    "   {\n",
+    "    Console.WriteLine(\"Число повторяется\");\n",
+    "    j++;\n",
+    "   }\n",
+    "}\n",
+    "if (j<=0)\n",
+    "    Console.WriteLine(\"Число не повторяется\");\n",
+    "\n"
+   ]
   },
   {
    "attachments": {
