--- a/Sprint0/Task0.ipynb
+++ b/Sprint0/Task0.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "language_info": {
      "name": "polyglot-notebook"
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "language_info": {
      "name": "polyglot-notebook"
@@ -210,7 +210,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
+   "metadata": {
+    "language_info": {
+     "name": "polyglot-notebook"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 5 6 7 8 9\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Array.Sort(mass);\n",
+    "var str = string.Join(\" \", mass);\n",
+    "Console.WriteLine(str);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "language_info": {
      "name": "polyglot-notebook"
@@ -242,26 +268,6 @@
     "if (j<=0)\n",
     "    Console.WriteLine(\"Число не повторяется\");\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "language_info": {
-     "name": "polyglot-notebook"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "Array.Sort(mass);\n",
-    "for(int i =0; i<=mass.Length-1; i++)\n",
-    "{\n",
-    "    Console.WriteLine(mass[i]);\n",
-    "}"
    ]
   },
   {
