--- a/Sprint0/Task1.ipynb
+++ b/Sprint0/Task1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -63,7 +63,13 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "Vehicle Car = new Vehicle();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -89,7 +95,13 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "Animal Cat = new Animal();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -146,8 +158,35 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Запустить двигатель...\n",
+      "Красный\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color;\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get {return color;}\n",
+    "        set{color=value;}\n",
+    "    }\n",
+    "    public void StartEngine()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Запустить двигатель...\");\n",
+    "    }\n",
+    "}\n",
+    "Vehicle Car = new Vehicle();\n",
+    "Car.Color = \"Красный\";\n",
+    "Car.StartEngine();\n",
+    "Console.WriteLine(Car.Color)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -171,8 +210,35 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кошка мяукает\n",
+      "Британская\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    private string species;\n",
+    "    public string Species\n",
+    "    {\n",
+    "        get {return species;}\n",
+    "        set{species=value;}\n",
+    "    }\n",
+    "    public void Sound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кошка мяукает\");\n",
+    "    }\n",
+    "}\n",
+    "Animal Cat = new Animal();\n",
+    "Cat.Species = \"Британская\";\n",
+    "Cat.Sound();\n",
+    "Console.WriteLine(Cat.Species)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -229,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -238,8 +304,45 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Красный\n",
+      "Поехали...\n",
+      "Синий\n",
+      "Поехали...\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    private string color;\n",
+    "    public string Color\n",
+    "    {\n",
+    "        get { return color; }\n",
+    "        set { color = value; }\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "myCar.Color = \"Красный\";\n",
+    "Console.WriteLine(myCar.Color);\n",
+    "myCar.Move();\n",
+    "myVehicle.Color = \"Синий\";\n",
+    "Console.WriteLine(myVehicle.Color);\n",
+    "myVehicle.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -254,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -263,8 +366,45 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Персидская\n",
+      "Кошка мяукает\n",
+      "Мейн-кун\n",
+      "Кошка мяукает\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    private string species;\n",
+    "    public string Species\n",
+    "    {\n",
+    "        get {return species;}\n",
+    "        set{species=value;}\n",
+    "    }\n",
+    "    public void Sound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кошка мяукает\");\n",
+    "    }\n",
+    "}\n",
+    "class Cat : Animal\n",
+    "{\n",
+    "\n",
+    "}\n",
+    "Animal Kitten = new Animal();\n",
+    "Cat cat = new Cat();\n",
+    "Kitten.Species = \"Персидская\";\n",
+    "Console.WriteLine(Kitten.Species);\n",
+    "Kitten.Sound();\n",
+    "cat.Species = \"Мейн-кун\";\n",
+    "Console.WriteLine(cat.Species);\n",
+    "cat.Sound();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -313,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -322,8 +462,36 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Транспорт двигается\n",
+      "Автомобиль двигается\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle\n",
+    "{\n",
+    "    public virtual void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Транспорт двигается\");\n",
+    "    }\n",
+    "}\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "    }\n",
+    "}\n",
+    "Vehicle myVehicle = new Vehicle();\n",
+    "Car myCar = new Car();\n",
+    "myVehicle.Move();\n",
+    "myCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -338,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -347,8 +515,36 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кошка мяукает\n",
+      "Собака гавкает\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal\n",
+    "{\n",
+    "    public virtual void Sound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кошка мяукает\");\n",
+    "    }\n",
+    "}\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    public override void Sound()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака гавкает\");\n",
+    "    }\n",
+    "}\n",
+    "Animal Cat = new Animal();\n",
+    "Dog dog = new Dog();\n",
+    "Cat.Sound();\n",
+    "dog.Sound();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -397,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -406,8 +602,37 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Батарея заряжена...\n",
+      "Поехали...\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstract class Car\n",
+    "{\n",
+    "    public abstract void ChargeBattery();\n",
+    "\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Поехали...\");\n",
+    "    }\n",
+    "}\n",
+    "class ElectricCar : Car\n",
+    "{\n",
+    "    public override void ChargeBattery()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Батарея заряжена...\");\n",
+    "    }\n",
+    "}\n",
+    "ElectricCar myElectricCar = new ElectricCar();\n",
+    "myElectricCar.ChargeBattery();\n",
+    "myElectricCar.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -422,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -431,8 +656,48 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Кошка мяукает\n",
+      "Животное\n",
+      "Лягушка прыгает\n",
+      "Животное\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstract class Animal\n",
+    "{\n",
+    "    public abstract void Move();\n",
+    "    public void animal()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Животное\");\n",
+    "    }\n",
+    "}\n",
+    "class Cat : Animal\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Кошка мяукает\");\n",
+    "    }\n",
+    "}\n",
+    "class Frog : Animal\n",
+    "{\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Лягушка прыгает\");\n",
+    "    }\n",
+    "}\n",
+    "Cat cat = new Cat();\n",
+    "Frog frog = new Frog();\n",
+    "cat.Move();\n",
+    "cat.animal();\n",
+    "frog.Move();\n",
+    "frog.animal();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -496,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -505,8 +770,43 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Двигатель стартовал\n",
+      "Автомобиль двигается\n",
+      "Двигатель остановлен\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "public class Engine\n",
+    "{\n",
+    "    public void Start() => Console.WriteLine(\"Двигатель стартовал\");\n",
+    "    public void Stop() => Console.WriteLine(\"Двигатель остановлен\");  \n",
+    "}\n",
+    "public class Car\n",
+    "{\n",
+    "    private Engine engine;\n",
+    "    public Car(Engine engine)\n",
+    "    {\n",
+    "        this.engine= engine;\n",
+    "    }\n",
+    "    public void Drive()\n",
+    "    {\n",
+    "        engine.Start();\n",
+    "        Console.WriteLine(\"Автомобиль двигается\");\n",
+    "        engine.Stop();\n",
+    "    }\n",
+    "}\n",
+    "Engine myEngine = new Engine();\n",
+    "Car myAuto = new Car(myEngine);\n",
+    "\n",
+    "myAuto.Drive();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -521,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -530,8 +830,41 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Хвост поднялся\n",
+      "Собака помахала хвостом\n",
+      "Хвост опустился\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Body_Part\n",
+    "{\n",
+    "    public void Start() => Console.WriteLine(\"Хвост поднялся\");\n",
+    "    public void Stop() => Console.WriteLine(\"Хвост опустился\"); \n",
+    "}\n",
+    "public class Dog\n",
+    "{\n",
+    "    private Body_Part tail;\n",
+    "    public Dog(Body_Part tail)\n",
+    "    {\n",
+    "        this.tail=tail;\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        tail.Start();\n",
+    "        Console.WriteLine(\"Собака помахала хвостом\");\n",
+    "        tail.Stop();\n",
+    "    }\n",
+    "}\n",
+    "Body_Part MyTail = new Body_Part();\n",
+    "Dog MyDog = new Dog(MyTail);\n",
+    "MyDog.Move();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -634,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -643,8 +976,57 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Автомобиль движется...\n",
+      "Игорь управляет траспортом...\n",
+      "Автомобиль движется...\n"
+     ]
+    }
+   ],
+   "source": [
+    "using System;\n",
+    "abstract class Vehicle\n",
+    "{\n",
+    "    public abstract void Drive();\n",
+    "}\n",
+    "class Car : Vehicle\n",
+    "{\n",
+    "    private Driver driver;\n",
+    "\n",
+    "    public Car(Driver driver)\n",
+    "    {\n",
+    "        this.driver = driver;\n",
+    "    }\n",
+    "\n",
+    "    public override void Drive()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Автомобиль движется...\");\n",
+    "    }\n",
+    "}\n",
+    "class Driver\n",
+    "{\n",
+    "    public string Name { get; set; }\n",
+    "\n",
+    "    public Driver(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "\n",
+    "    public void Drive(Vehicle vehicle)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} управляет траспортом...\");\n",
+    "        vehicle.Drive();\n",
+    "    }\n",
+    "}\n",
+    "Driver Igor = new Driver(\"Игорь\");\n",
+    "Car myCar = new Car(Igor);\n",
+    "myCar.Drive();\n",
+    "Igor.Drive(myCar);"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -659,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -668,8 +1050,53 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Собака гуляет\n",
+      "Даша выгуливает собаку\n",
+      "Собака гуляет\n"
+     ]
+    }
+   ],
+   "source": [
+    "abstract class Animal\n",
+    "{\n",
+    "    public abstract void Move();\n",
+    "}\n",
+    "class Dog : Animal\n",
+    "{\n",
+    "    private Owner owner;\n",
+    "    public Dog(Owner owner)\n",
+    "    {\n",
+    "        this.owner = owner;\n",
+    "    }\n",
+    "\n",
+    "    public override void Move()\n",
+    "    {\n",
+    "        Console.WriteLine(\"Собака гуляет\");\n",
+    "    }\n",
+    "}\n",
+    "class Owner\n",
+    "{\n",
+    "    public string Name {get;set;}\n",
+    "    public Owner(string name)\n",
+    "    {\n",
+    "        Name = name;\n",
+    "    }\n",
+    "     public void Move(Animal animal)\n",
+    "    {\n",
+    "        Console.WriteLine($\"{Name} выгуливает собаку\");\n",
+    "        animal.Move();\n",
+    "    }\n",
+    "}\n",
+    "Owner o = new Owner(\"Даша\");\n",
+    "Dog dog = new Dog(o);\n",
+    "dog.Move();\n",
+    "o.Move(dog);"
+   ]
   }
  ],
  "metadata": {
