--- a/Sprint0/Task3.ipynb
+++ b/Sprint0/Task3.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -79,76 +79,92 @@
    },
    "outputs": [
     {
-     "ename": "Error",
-     "evalue": "(45,27): error CS7036: Отсутствует аргумент, соответствующий требуемому параметру \"ProductName\" из \"OrderLine.OrderLine(string, string, int)\".\r\n(37,14): error CS7036: Отсутствует аргумент, соответствующий требуемому параметру \"ProductId\" из \"OrderLine.OrderLine(string, string, int)\".\r\n(21,14): error CS7036: Отсутствует аргумент, соответствующий требуемому параметру \"ProductId\" из \"OrderLine.OrderLine(string, string, int)\".\r\n(29,14): error CS7036: Отсутствует аргумент, соответствующий требуемому параметру \"ProductId\" из \"OrderLine.OrderLine(string, string, int)\".",
-     "output_type": "error",
-     "traceback": [
-      "(45,27): error CS7036: Отсутствует аргумент, соответствующий требуемому параметру \"ProductName\" из \"OrderLine.OrderLine(string, string, int)\".\r\n",
-      "(37,14): error CS7036: Отсутствует аргумент, соответствующий требуемому параметру \"ProductId\" из \"OrderLine.OrderLine(string, string, int)\".\r\n",
-      "(21,14): error CS7036: Отсутствует аргумент, соответствующий требуемому параметру \"ProductId\" из \"OrderLine.OrderLine(string, string, int)\".\r\n",
-      "(29,14): error CS7036: Отсутствует аргумент, соответствующий требуемому параметру \"ProductId\" из \"OrderLine.OrderLine(string, string, int)\"."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Общая стоимость заказа: 10\n",
+      "Новая цена: 15\n",
+      "Id товара: i12332, Название товара: Игрушка, Цена: 15\n",
+      "Количество единиц товара:10. Общая стоимость: 100\n",
+      "Скидка:40%. Цена товара со скидкой: 4\n",
+      "Предварительный платеж:5 Оставшаяся сумма: 5\n"
      ]
     }
    ],
    "source": [
+    "using System;\n",
     "public class OrderLine\n",
     "{    \n",
     "    public string ProductId { get; set; }\n",
     "    public string ProductName { get; set; }\n",
-    "    public int Price { get; set; }\n",
-    "    public virtual int CalculateTotal()\n",
+    "    public decimal Price { get; set; }\n",
+    "    public OrderLine(string productid,string productname,decimal price)\n",
     "    {\n",
-    "        return Price;\n",
+    "        ProductId=productid;\n",
+    "        ProductName=productname;\n",
+    "        Price=price;\n",
     "    }\n",
-    "    public virtual void UpdatePrice(int Price)\n",
+    "    public void CalculateTotal()\n",
     "    {\n",
-    "        this.Price = Price;\n",
+    "        Console.WriteLine($\"Общая стоимость заказа: {Price}\");\n",
     "    }\n",
-    "    public string GetProductDetails()\n",
+    "    public void UpdatePrice(decimal newPrice)\n",
     "    {\n",
-    "        return $\"Id товара: {ProductId}, Название товара: {ProductName}, Цена: {Price}\";\n",
+    "        this.Price = newPrice;\n",
+    "        Console.WriteLine($\"Новая цена: {newPrice}\");\n",
+    "    }\n",
+    "    public void GetProductDetails()\n",
+    "    {\n",
+    "        Console.WriteLine( $\"Id товара: {ProductId}, Название товара: {ProductName}, Цена: {Price}\");\n",
     "    }\n",
     "}\n",
     "public class StandardLine: OrderLine\n",
     "{\n",
     "    public int Units{get;set;}\n",
-    "    public override int CalculateTotal()\n",
+    "    public StandardLine(string productid,string productname,decimal price,int units) : base(productid,productname,price)\n",
     "    {\n",
-    "        return Units;\n",
+    "        Units = units;\n",
+    "    }\n",
+    "    public void CalculateTotal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Количество единиц товара:{Units}. Общая стоимость: {Units*Price}\");\n",
     "    }\n",
     "}\n",
     "public class SpecialLine: OrderLine\n",
     "{\n",
     "    public int Discount{get;set;}\n",
-    "    public override void UpdatePrice(int Discount)\n",
+    "    public SpecialLine(string productid,string productname,decimal price,int discount): base(productid,productname,price)\n",
     "    {\n",
-    "        this.Price = (Price*Discount)/100; \n",
+    "        Discount = discount;\n",
+    "    }\n",
+    "    public void UpdatePrice()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Скидка:{Discount}%. Цена товара со скидкой: {Price = (Price*Discount)/100}\"); \n",
     "    }\n",
     "}\n",
-    "public class freeLine: OrderLine\n",
+    "public class FreeLine: OrderLine\n",
     "{\n",
-    "    public int Prepayment;\n",
-    "    public override int CalculateTotal()\n",
+    "    public int Prepayment{get;set;}\n",
+    "    public FreeLine(string productid,string productname,decimal price,int prepayment): base(productid,productname,price)\n",
     "    {\n",
-    "        return Price-Prepayment;\n",
+    "        Prepayment = prepayment;\n",
+    "    }\n",
+    "    public void CalculateTotal()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Предварительный платеж:{Prepayment} Оставшаяся сумма: {Price-Prepayment}\");\n",
     "    }\n",
     "}\n",
-    "OrderLine ProductId = new OrderLine();"
+    "OrderLine ProductId,ProductName,Price = new OrderLine(\"i12332\",\"Игрушка\",10);\n",
+    "Price.CalculateTotal();\n",
+    "Price.UpdatePrice(15);\n",
+    "Price.GetProductDetails();\n",
+    "StandardLine Units = new StandardLine(\"i12332\",\"Игрушка\",10,10);\n",
+    "Units.CalculateTotal();\n",
+    "SpecialLine Discount = new SpecialLine(\"i12332\",\"Игрушка\",10,40);\n",
+    "Discount.UpdatePrice();\n",
+    "FreeLine Prepayment = new FreeLine(\"i12332\",\"Игрушка\",10,5);\n",
+    "Prepayment.CalculateTotal();"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "language_info": {
-     "name": "polyglot-notebook"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
