--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -285,7 +285,8 @@
       "Животное: Кошка\n",
       "Цвет животного: Серый\n",
       "Порода кошки: Шотландская вислоухая\n",
-      "Возраст кошки: 5\n"
+      "Возраст кошки: 5\n",
+      "Всего животных: 2\n"
      ]
     }
    ],
@@ -296,8 +297,9 @@
     "}\n",
     "public class Animal: IClass\n",
     "{\n",
+    "    public static int Count;\n",
     "    public string Color_Name{get;set;}\n",
-    "    public static string Clas{get;set;}\n",
+    "    public string Clas{get;set;}\n",
     "    public Animal(string color, string clas)\n",
     "    {\n",
     "        Color_Name = color;\n",
@@ -310,6 +312,7 @@
     "    public void Class()\n",
     "    {\n",
     "        Console.WriteLine($\"Животное: {Clas}\");\n",
+    "        Count++;\n",
     "    }\n",
     "}\n",
     "public class Cat: Animal\n",
@@ -338,7 +341,8 @@
     "MyCat.Class();\n",
     "MyCat.Color();\n",
     "MyCat.FBreed();\n",
-    "MyCat.FAge();"
+    "MyCat.FAge();\n",
+    "Console.WriteLine($\"Всего животных: {Animal.Count}\");"
    ]
   }
  ],
