--- a/Sprint1/Task0.ipynb
+++ b/Sprint1/Task0.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -242,7 +242,7 @@
     "    {\n",
     "\n",
     "    }\n",
-    "    public void Move()\n",
+    "    public new void Move()\n",
     "    {\n",
     "        Console.WriteLine($\"Автомобиль двигается со скоростью:{Speed} км/ч\");\n",
     "    }\n",
