--- a/Sprint1/Task2.ipynb
+++ b/Sprint1/Task2.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -110,8 +110,69 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Транспорт двигается со скоростью:60 км/ч\n",
+      "Цвет транспорта: Красный\n",
+      "Автомобиль двигается со скоростью:40 км/ч\n",
+      "Цвет транспорта: Синий\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IMove\n",
+    "{\n",
+    "    void Move();\n",
+    "}\n",
+    "public interface IColor\n",
+    "{\n",
+    "    void SColor();\n",
+    "}\n",
+    "public class Vehicle: IMove,IColor\n",
+    "{\n",
+    "    public string Color{get;set;}\n",
+    "    public int Speed{get;set;}\n",
+    "    public Vehicle(int speed)\n",
+    "    {\n",
+    "        Speed=speed;\n",
+    "    }\n",
+    "    public void Move()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Транспорт двигается со скоростью:{Speed} км/ч\");\n",
+    "    }\n",
+    "    public void SColor()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Цвет транспорта: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "public class Car : Vehicle,IMove,IColor\n",
+    "{\n",
+    "    public new string Color{get;set;}\n",
+    "    public Car(int speed): base(speed)\n",
+    "    {\n",
+    "\n",
+    "    }\n",
+    "    public new void Move()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Автомобиль двигается со скоростью:{Speed} км/ч\");\n",
+    "    }\n",
+    "    public new void SColor()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Цвет транспорта: {Color}\");\n",
+    "    }\n",
+    "}\n",
+    "Vehicle myVehicle = new Vehicle(60);\n",
+    "Car myCar = new Car(40);\n",
+    "myVehicle.Move();\n",
+    "myVehicle.Color = \"Красный\";\n",
+    "myVehicle.SColor();\n",
+    "myCar.Move();\n",
+    "myCar.Color = \"Синий\";\n",
+    "myCar.SColor();"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,8 +196,102 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Животное: Лев\n",
+      "Цвет животного: Желтый\n",
+      "Животное: Кошка\n",
+      "Цвет животного: Серый\n",
+      "Порода кошки: Шотландская вислоухая\n",
+      "Возраст кошки: 5\n",
+      "Животное: Собака\n",
+      "Цвет животного: Черный\n",
+      "Порода собаки: Немецкая овчарка\n",
+      "Возраст собаки: 3\n",
+      "Всего животных: 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "public interface IClass\n",
+    "{\n",
+    "    void Class();\n",
+    "}\n",
+    "public class Animal: IClass\n",
+    "{\n",
+    "    public static int Count;\n",
+    "    public string Color_Name{get;set;}\n",
+    "    public string Clas{get;set;}\n",
+    "    public Animal(string color, string clas)\n",
+    "    {\n",
+    "        Color_Name = color;\n",
+    "        Clas = clas;\n",
+    "    }\n",
+    "    public void Color()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Цвет животного: {Color_Name}\");\n",
+    "    }\n",
+    "    public void Class()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Животное: {Clas}\");\n",
+    "        Count++;\n",
+    "    }\n",
+    "}\n",
+    "public class Cat: Animal\n",
+    "{\n",
+    "    public string Breed{get;set;}\n",
+    "    public int Age{get;set;}\n",
+    "    public Cat(string color,string clas,string breed,int age): base(color,clas)\n",
+    "    {\n",
+    "        Age = age;\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "    public void FAge()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Возраст кошки: {Age}\");\n",
+    "    }\n",
+    "    public void FBreed()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Порода кошки: {Breed}\");\n",
+    "    }\n",
+    "\n",
+    "}\n",
+    "public class Dog: Animal\n",
+    "{\n",
+    "    public string Breed{get;set;}\n",
+    "    public int Age{get;set;}\n",
+    "    public Dog(string color,string clas,string breed,int age): base(color,clas)\n",
+    "    {\n",
+    "        Age = age;\n",
+    "        Breed = breed;\n",
+    "    }\n",
+    "    public void FAge()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Возраст собаки: {Age}\");\n",
+    "    }\n",
+    "    public void FBreed()\n",
+    "    {\n",
+    "        Console.WriteLine($\"Порода собаки: {Breed}\");\n",
+    "    }\n",
+    "}\n",
+    "Animal Lion = new Animal(\"Желтый\",\"Лев\");\n",
+    "Lion.Class();\n",
+    "Lion.Color();\n",
+    "Cat MyCat = new Cat(\"Серый\",\"Кошка\",\"Шотландская вислоухая\",5);\n",
+    "MyCat.Class();\n",
+    "MyCat.Color();\n",
+    "MyCat.FBreed();\n",
+    "MyCat.FAge();\n",
+    "Dog MyDog = new Dog(\"Черный\",\"Собака\",\"Немецкая овчарка\",3);\n",
+    "MyDog.Class();\n",
+    "MyDog.Color();\n",
+    "MyDog.FBreed();\n",
+    "MyDog.FAge();\n",
+    "Console.WriteLine($\"Всего животных: {Animal.Count}\");"
+   ]
   }
  ],
  "metadata": {
